# pryonix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
pryonix/: _NetworkModels.py  __init__.py
pryonix/connectomes/: __init__.py  _connectomes.py  _graphml.py  _parcellation.py
pryonix/datasets/: __init__.py  adnidataset.py  petdataset.py
pryonix/models/: __init__.py  model_library.py  network_model.py
pyatn/: _NetworkModels.py  __init__.py
pyatn/connectomes/: _connectomes.py
pyatn/datasets/: __init__.py  adnidataset.py  graddataset.py  petdataset.py
pyatn/models/: __init__.py  model_library.py
tests/: adni-test.csv  conftest.py  requirements.txt  test_dataset.py  test_models.py
