[project]
name = "pyatn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diffrax>=0.6.1",
    "ipykernel>=6.29.5",
    "jax>=0.4.30",
    "jupyter>=1.1.1",
    "lxml>=5.3.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "numpyro>=0.16.1",
    "polars>=1.21.0",
]
