[project]
name = "pyatn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
    "jax>=0.8.2",
    "lxml>=6.0.2",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]